# knight-libs

./: .clang-format  CHANGELOG  CMakeLists.txt  LICENSE  README.md
examples/: animation.cpp  map.cpp
src/: animation.cpp  animation.hpp  game.cpp  game.hpp  hex.cpp  hex.hpp  hex_map.cpp  hex_map.hpp  loader.cpp  loader.hpp  pathfinding.cpp  pathfinding.hpp  simple_ecs.hpp
src/gui/: gui.cpp  gui.hpp
tests/: test_animation.cpp  test_loader.cpp
